--- a/style.css
+++ b/style.css
@@ -1,16 +1,28 @@
-﻿body {
+﻿@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #545050;
 }
+
 
 .column {
     float: left;
+    min-block-size: 100%;
+    height: 150em;
+    padding-top: 1.9em;
 }
 
 .left, .right {
     width: 20%;
+    background-color: #FFFFFF70;
 }
 
 .middle {
     width: 60%;
+    background-color: #E0E0E070;
+    
 }
 
 
@@ -20,10 +32,24 @@
 }
 
 header {
-    background-color: hsla(0, 0%, 50%, 0.5);
-    font-size: 150%;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
-    padding-left: 10%;
-    padding-right: 10%;
+    position: fixed;
+    width: 99.1%;
+    background-color: #E0E0E070;
+    font-size: 115%;
+    text-align: center;
+    height: 1.5em;
+    padding-top: .6em;
 }
+
+.clickable {
+    color: black;
+    text-decoration: none;
+    padding-right: 12%;
+    font-weight: 500;
+}
+
+.logo {
+    text-align: right;
+    padding-left: 10%;
+}
+
